--- a/css/styles.css
+++ b/css/styles.css
@@ -1046,6 +1046,15 @@ button {
   transform: translateY(-50%);
 }
 
+.modal-input:focus,
+.modal-comment:focus {
+  border-color: #4D5AE5;
+}
+
+.modal-input:focus + .modal-input-icon {
+  fill: #4D5AE5;
+}
+
 .modal-form-field.comment-field {
   margin-bottom: 16px;
 }
