--- a/css/styles.css
+++ b/css/styles.css
@@ -405,6 +405,14 @@ button {
   min-width: 169px;
 }
 
+@media (min-resolution: 192dpi) {
+  .hero {
+    background-image: linear-gradient(to bottom,
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)),
+      url(../images/people-office-mob@2x.jpg);
+  }
+
 @media screen and (min-width: 768px) {
   .hero {
     padding-top: 112px;
@@ -424,6 +432,14 @@ button {
     margin-bottom: 36px;
   }
 }
+
+@media (min-resolution: 192dpi) {
+  .hero {
+    background-image: linear-gradient(to bottom,
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)),
+      url(../images/people-office-tab@2x.jpg);
+  }
 
 @media screen and (min-width: 1158px) {
   .hero {
@@ -907,6 +923,7 @@ button {
 
   .footer-subscribe-text {
     max-width: 264px;
+    text-align: left;
   }
 
   .footer-subscribe-form {
